Project project_name {
  database_type: 'PostgreSQL'
  Note: 'DER para gerenciar membros e patrocinadores'
}

Enum user_type_enum {
  ADM
  SPONSOR
  MEMBER
}

Enum sponsor_tier_enum {
  BRONZE
  SILVER
  GOLD
}

Enum sponsor_entity_type_enum {
  PERSON 
  COMPANY 
  GOVERNMENT 
  NGO
}

Enum sponsor_persona_enum { // pode vir nulo caso sponsor type seja Company ou Government
  POLITICIAN 
  INFLUENCER 
  ATHLETE 
  OTHER
}

Enum member_type_enum {
  SUBSCRIBER // assinante (pagante)
  SPONSORED // patrocinado pela associacao
}

Enum member_status_enum {
  ACTIVE      // em dia e habilitado
  DUE_SOON    // perto do vencimento (opcional)
  OVERDUE     // com mensalidade atrasada
  INACTIVE    // desativado administrativamente
}

Table users {
  id               uuid [pk]
  email            varchar(255) [not null, unique]
  password         varchar(20) [not null]

  is_account_active boolean [default: false]

  type             user_type_enum [not null, default: 'MEMBER']

  profile_url      varchar

  created_at       timestamp
  updated_at       timestamp

  Note: 'User'
}

Table sponsors {
  id                      uuid [pk]
  user_id                 uuid [ref: - users.id, not null]  
  name                    varchar(255) [not null]
  public_name             varchar(255) [not null] // nome associado ao CNPJ/CPF ou nome público completo
  document         varchar(20) [not null, unique]
  code             varchar(5) [not null, unique]

  tier                    sponsor_tier_enum [not null, default: "BRONZE"]
  entity_type             sponsor_entity_type_enum [not null]
  persona                 sponsor_persona_enum [not null]

  logo_url                varchar(255) 
  site                    varchar(255)
  instagram               varchar(255)
  whatsapp                varchar(255) [unique, note: "desconsiderar valor nulo"]

  is_active               boolean [default: true, not null]

  created_at              timestamp
  updated_at              timestamp

  Note: 'Sponsor (patrocinador)'
}

Table members {
  id                    uuid [pk]
  user_id               uuid [ref: - users.id, not null]
  name                  varchar(255) [not null]
  document         varchar(20) [not null, unique]
  code             varchar(5) [not null, unique]

  whatsapp              varchar(50) [not null, unique]

  type                  member_type_enum [not null]
  is_active             boolean [default: true] // compat/legado: “em dia” (recomendado derivar de status + mensalidades)

  created_at            timestamp
  updated_at            timestamp

  Note: 'Member (associado)'
}

Table generate_pass_codes {
  code      varchar(5) [pk]
  is_active boolean [default: true] // Se já foi usado ou gerado outro para o mesmo user, is_active = false
  user_id   uuid [ref: > users.id]

  expiration_date date [not null]

  Note: 'Generate_Pass_Code'
}

Table benefits {
  id          uuid [pk]
  sponsor_id  uuid [ref: > sponsors.id, note: 'Pode estar vinculado a um sponsor ou não']
  name        varchar(255) [not null]
  description text
  address     text
  is_active   boolean [default: true]

  Note: 'Benefits'
}

Table sponsored_member {
  member_id uuid [ref: - members.id]  // membro patrocinado
  granted_by_user_id uuid [ref: - users.id]  // quem vinculou ele

  start_at date [not null]
  end_at   date

  reason   text
  is_active boolean [default: true]

  created_at  timestamp
  updated_at  timestamp

  indexes {
    (member_id, granted_by_user_id) [pk]
  }

  Note: 'patrocínio pela associação (para SPONSORED)'
}

Table subscriber_member {
  id uuid [pk]
  member_id uuid [ref: - members.id, not null]

    // config de cobrança (para SUBSCRIBER)
  monthly_fee_amount  numeric(10,2) [not null]
  billing_day         int [not null] // 1..28/31 (regra de vencimento)
  status            member_status_enum [not null, default: "ACTIVE"]

  // datas “resumo” (para acompanhamento)
  next_due_date       date [not null]
  last_paid_at        timestamp
  // overdue_since       date
  // overdue_days        int

  created_at  timestamp
  updated_at  timestamp
}

// Table settings {
//   id uuid [pk]

//   subscription_default_price numeric(10,2)

//   created_at  timestamp
//   updated_at  timestamp
// }

Table sponsors_members_checkin {
  id uuid [pk]

  sponsor_id uuid [ref: > sponsors.id, not null]
  member_id uuid [ref: > members.id, not null]

  validated boolean [not null, default: false]
  reason text

  created_at  timestamp

  indexes {
    (sponsor_id, member_id)
  }
}